project/force-app/main/default/objects/Sales_T_3_Achievement_Target__c/Sales_T_3_Achievement_Target__c.object-meta.xml
<CustomObject>
    <label>Sales T+3 Achievement Target</label>
    <nameField>
        <displayFormat>TGT-{000000}</displayFormat>
        <label>Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales T+3 Achievement Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>