project/force-app/main/default/objects/Sales_T_3_Achievement_Target__c/fields/Area_m2__c.field-meta.xml
<CustomField>
    <fullName>Area_m2__c</fullName>
    <label>Area (m2)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>