project/force-app/main/default/objects/Sales_T_3_Achievement_Target__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Entity</label>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipLabel>Sales T+3 Achievement Targets (Business_Entity)</relationshipLabel>
    <relationshipName>Sales_T_3_Achievemen_Business_Entity</relationshipName>
    <type>Lookup</type>
</CustomField>