project/force-app/main/default/objects/Sales_T_3_Achievement_Target__c/fields/Committed_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_Date__c</fullName>
    <label>Ngay Chot Khach</label>
    <type>Date</type>
</CustomField>