project/force-app/main/default/objects/Sales_T_3_Achievement_Target__c/fields/Deposited_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposited_Date__c</fullName>
    <label>Ngay Coc</label>
    <type>Date</type>
</CustomField>