project/force-app/main/default/objects/Sales_T_3_Achievement_Target__c/fields/Negotiation_Area__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Area__c</fullName>
    <label>Dien Tich Dam Phan (m2)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>