project/force-app/main/default/objects/Sales_T_3_Achievement_Target__c/fields/RO__c.field-meta.xml
<CustomField>
    <fullName>RO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RO</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales T+3 Achievement Targets (RO)</relationshipLabel>
    <relationshipName>Sales_T_3_Achievemen_RO</relationshipName>
    <type>Lookup</type>
</CustomField>