project/force-app/main/default/objects/Sales_T_3_Achievement_Target__c/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales T+3 Achievement Targets (Sales_Director)</relationshipLabel>
    <relationshipName>Sales_T_3_Achievemen_Sales_Director</relationshipName>
    <type>Lookup</type>
</CustomField>