project/force-app/main/default/objects/Sales_T_3_Achievement_Target__c/fields/Target_Month__c.field-meta.xml
<CustomField>
    <fullName>Target_Month__c</fullName>
    <label>Target Month</label>
    <required>true</required>
    <type>Date</type>
</CustomField>