project/force-app/main/default/objects/Sales_T_3_Achievement_Target__c/fields/Unit_Price_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_VND_m2_Month__c</fullName>
    <label>Unit Price (VND/m2/Month)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>